--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -48,10 +48,11 @@
     border: none;
     padding: 10px;
     cursor: pointer;
+    font-size: 18px;
   }
   
   .headerSearch {
-    height: 30px;
+    height: 60px;
     background-color: white;
     border: 3px solid #febb02;
     display: flex;
@@ -63,26 +64,36 @@
     bottom: -25px;
     width: 100%;
     max-width: 1024px;
+    font-size: 20px;
+    
+   
+    
+    
   }
   
-  .headerIcon {
-    color: lightgray;
-  }
+  
   
   .headerSearchItem {
     display: flex;
     align-items: center;
     gap: 10px;
+    color: rgb(131, 120, 120);
+    
   }
   
   .headerSearchInput {
     border: none;
     outline: none;
+    font-size: 18px;
+    color: rgb(68, 67, 67);
+
+ 
   }
   
   .headerSearchText {
-    color: lightgray;
+   
     cursor: pointer;
+   
   }
   
   .date {
@@ -98,10 +109,10 @@
     position: absolute;
     top: 50px;
     background-color: white;
-    color: gray;
     border-radius: 5px;
     -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.8);
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.8);
+ 
   }
   
   .optionItem {
@@ -116,19 +127,21 @@
     align-items: center;
     gap: 10px;
     font-size: 12px;
-    color: black;
+    color: rgb(49, 49, 49);
+    font-weight: 500;
   }
   
-  .optionCounterButton {
+  .optionCounterBtn {
     width: 30px;
     height: 30px;
     border: 1px solid #0071c2;
     color: #0071c2;
     cursor: pointer;
     background-color: white;
+    font-weight: 600; 
   }
   
-  .optionCounterButton:disabled {
+  .optionCounterBtn:disabled {
     cursor: not-allowed;
   }
   
