--- a/client/src/components/mailList/mailList.css
+++ b/client/src/components/mailList/mailList.css
@@ -16,12 +16,14 @@
 .mailInputContainer>input{
 
 
-    height: 30px;
+    height: 50px;
     width: 300px;
     padding: 10px;
     border: none;
     outline: none;
     border-radius: 5px;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 .mailInputContainer>button{
