--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -16,7 +16,8 @@
   }
   
   .logo{
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 24px;
   }
   
   .navButton{
@@ -25,4 +26,7 @@
     padding: 5px 10px;
     cursor: pointer;
     color: #003580;
+    font-size: 18px;
+    font-weight: 400;
+    
   }
