--- a/client/src/pages/hotel/hotel.css
+++ b/client/src/pages/hotel/hotel.css
@@ -114,3 +114,66 @@
     border-radius: 5px;
   }
   
+
+  .slider{
+
+   position: sticky;
+  top: 0;
+  left: 0;
+  width: 99.2vw;
+  height: 100vh;
+ 
+  z-index: 999;
+  display: flex;
+  align-items: center;
+
+
+   
+  }
+
+  .sliderWrapper{
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.613);
+    justify-content: center;
+     align-items: center;
+
+  }
+
+  .sliderImg{
+
+ width: 80%;
+ height: 80vh;
+
+  }
+
+.close{
+
+  position: absolute;
+  top:45px;
+  right: 100px;
+  font-size: 40px !important;
+  color: lightgray;
+  cursor: pointer;
+
+}
+
+.arrow{
+  font-size: 60px !important;
+  color: lightgray;
+  cursor: pointer;
+}
+
+.arrow.left{
+
+  position: absolute;
+  left: 80px;
+}
+
+.arrow.right{
+
+  position: absolute;
+  right: 80px;
+}
